# hairBoot

./: README.md  app.map  bootloader.c  bootloader.h  bootloader.hex  bootloader.out  hairBoot.ewp  hairBoot.eww  lnkstm8s103f3.icf  make.bat  out2hex.bat  stm8s.h
hbloader/: .gitignore  CMakeLists.txt  Dockerfile  README.md  ihex2stm8  main.c  toolchain
